deploy/kuber/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-messanger-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-messanger-user
  template:
    metadata:
      labels:
        app: msa-messanger-user
    spec:
      containers:
      - name: msa-messanger-user
        imagePullPolicy: "Never"
        image: msa-messanger-user:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1024Mi"
            cpu: "10m"
          requests:
            memory: "1024Mi"
            cpu: "5m"
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-messanger-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-messanger-auth
  template:
    metadata:
      labels:
        app: msa-messanger-auth
    spec:
      containers:
      - name: msa-messanger-auth
        image: msa-messanger-auth:latest
        imagePullPolicy: "Never"
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1024Mi"
            cpu: "10m"
          requests:
            memory: "1024Mi"
            cpu: "5m"
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-messanger-messaging-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-messanger-messaging
  template:
    metadata:
      labels:
        app: msa-messanger-messaging
    spec:
      containers:
      - name: msa-messanger-messaging
        imagePullPolicy: "Never"
        image: msa-messanger-messaging:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1024Mi"
            cpu: "10m"
          requests:
            memory: "1024Mi"
            cpu: "5m"
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
