deploy/kuber/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-messenger-auth-service
spec:
  selector:
    app: msa-messenger-auth
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 8090
      targetPort: 8090
      name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: msa-messenger-user-service
spec:
  selector:
    app: msa-messenger-user
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: msa-messenger-messaging-service
spec:
  selector:
    app: msa-messenger-messaging
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8082
